update text to refer to Overall Score consistently

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -12,25 +12,26 @@
             <a class='external' href='http://www.asu.edu'>Arizona State University</a>.
             We develop real-time dynamic experiments to analyze and better understand collective action issues. For
             example, sharing common resources has been a challenge for human societies for millennia. In many
-            circumstances, the ability to create effective institutional 
-            arrangements has helped to avoid the <a href='http://en.wikipedia.org/wiki/Tragedy_of_the_commons'>tragedy of the commons</a>. 
+            circumstances, the ability to create <a href='http://en.wikipedia.org/wiki/Elinor_Ostrom#Design_principles_for_Common_Pool_Resource_.28CPR.29_institutions'>effective institutional 
+                arrangements</a> has helped to avoid the <a href='http://en.wikipedia.org/wiki/Tragedy_of_the_commons'>tragedy of the commons</a>. 
             <a href='http://www.sciencemag.org/cgi/content/abstract/328/5978/613'>Controlled experiments</a> are 
-            instrumental for increasing our understanding of how people organize themselves in cooperative
+            an important instrument for increasing our understanding of how people organize themselves in cooperative
             arrangements.
         </div>
-        <h2>Participate in paid ASU research</h2>
+        <h2>Participate in ASU research</h2>
         <p>
         If you are at least 18 years old and an undergraduate student currently enrolled at ASU you can 
         <a href='https://vcweb.asu.edu/cas/login'>sign up</a> to the participant database that we use for randomly
         selecting participants.
         </p>
         <p>
-        Typical experiments involve making decisions on a computer or on paper or answering survey questions. Experiments take about an hour to complete
-        and may be conducted online or at the <a href='http://csid.asu.edu/ostrom-lab/elinor-ostrom-multi-method-lab'>Elinor
-            Ostrom Multi-Methods Laboratory</a> in <a href='https://maps.asu.edu/?id=120&mrkIid=62880'>Cowden Hall, Room
-            124</a>. Your participation in these experiments is entirely voluntary.  For participating in these studies, you
-        will typically receive $5 for showing up, and an additional amount which can vary between $5 to $40 depending on
-        your decisions during the experiment. 
+        Typical experiments involve making decisions on a computer or on paper or answering survey questions.
+        Experiments take about an hour to complete and may be conducted online or at the 
+        <a href='http://csid.asu.edu/ostrom-lab/elinor-ostrom-multi-method-lab'>Elinor Ostrom Multi-Methods Laboratory</a>
+        in <a href='https://maps.asu.edu/?id=120&mrkIid=62880'>Cowden Hall, Room 124</a>. Your participation in these
+        experiments is entirely voluntary.  For participating in these studies, you will typically receive $5 for
+        showing up, and an additional amount which can vary between $5 to $40 depending on your decisions during the
+        experiment. 
         </p>
         <p>
         You can sign up by visiting <a href='https://vcweb.asu.edu/cas/login'>https://vcweb.asu.edu/cas/login</a>, signing
